--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="flex space-x-1 sm:space-x-4">
                         <h1 class="font-medium">Population in number :</h1>
-                        <h1 id="population"></h1>
+                        <h1 class="text-right" id="population"></h1>
                     </div>
                     <div>
                         <h1 id="linkTo" class="link link-primary"></h1>
