--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                         <h1 class="font-medium">Google Map Address :  </h1>
                         <h1 class="text-right" id="map"></h1>
                     </div>
+                    <div class="flex space-x-1 sm:space-x-4 text-white">
+                        <h1 class="font-medium">Average Current Temparature :  </h1>
+                        <h1 class="text-right" id="avgtemp"></h1>
+                    </div>
                     <div>
                         <h1 id="linkTo" class="link link-primary" ></h1>
                     </div>
