--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="flex justify-center">
                     <div class="flex space-x-5 pb-5 items-center ">
                         <input placeholder="Type Country Name" type="text" id="search" class="p-2 rounded-lg sm:p-4">
-                        <button id="search-btn" class="btn btn-ghost">Search</button>
+                        <button id="search-btn" class="btn btn-success text-white">Search</button>
                     </div>
                 </div>
                 
@@ -86,6 +86,10 @@
                     <div class="" id="img-container"></div>
                     <div>
                         <h1 id="linkTo" class="link link-primary" ></h1>
+                    </div>
+                    <div class="flex space-x-5 items-center">
+                        <h1 class="text-[18px] font-medium">&copy; Saad Ibn Akhter</h1>
+                        <a href="https://github.com/saad1ibn2akhter"><img src="git.png" class="w-[50px] h-[50px] rounded-full" alt=""></a>
                     </div>
                 </div>
             </div>
