--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <div class="p-3 text-center items-center bg-gray-100 sm:p-10" style="background-image: url(majestic-mountain-peak-tranquil-meadow-panoramic-landscape-generated-by-ai.jpg); background-position: center; -webkit-background-composite: inherit;">
                 <!-- project title -->
                 <div class="flex justify-center">
-                    <div class="flex space-x-5 pb-5 items-center ">
-                        <input placeholder="Type Country Name" type="text" id="search" class="p-2 rounded-lg sm:p-4">
+                    <div class="flex flex-col space-y-3 sm:flex-row sm:space-y-0 space-x-5 pb-5 items-center ">
+                        <input placeholder="Type Country Name" type="text" id="search" class="p-2 rounded-lg text-center justify-center items-center flex mx-auto sm:p-4">
                         <button id="search-btn" class="btn btn-success text-white">Search</button>
                     </div>
                 </div>
